fix emojis on mobile were showing too big

--- a/src/styles/sass/_global.scss
+++ b/src/styles/sass/_global.scss
@@ -807,6 +807,7 @@ body {
 
         span {
           display: flex;
+          justify-content: center;
           opacity: 0.3;
         }
       }
