--- a/src/styles/sass/games/connect-four-quest.scss
+++ b/src/styles/sass/games/connect-four-quest.scss
@@ -12,6 +12,10 @@
           height: 35px;
           width: 35px;
           font-size: 16px;
+
+          img {
+            width: 65%;
+          }
         }
       }
     }
