--- a/src/styles/sass/games/orbito-quest.scss
+++ b/src/styles/sass/games/orbito-quest.scss
@@ -43,6 +43,10 @@
           height: 50px;
           width: 50px;
           font-size: 16px;
+
+          img {
+            width: 65%;
+          }
         }
       }
 
